<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#f5f7f7"
    android:orientation="vertical" >

    <include
        android:id="@+id/titleBar"
        layout="@layout/root_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/bind_SIM"
        android:textSize="20sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/bind_sim"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/dialog_input"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/bind_IMEI"
        android:textSize="20sp" 
      />

    <EditText
        android:id="@+id/bind_imei"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:maxLength="15"
        android:background="@drawable/dialog_input"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/bind_SPN"
        android:textSize="20sp" 
        android:visibility="gone"/>

    <EditText
        android:id="@+id/bind_spn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/dialog_input"
        android:layout_marginTop="10dp"
         android:visibility="gone" />
    
    
    <Button
        android:id="@+id/bind_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:text="@string/next"
        android:background="@drawable/button_normal"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
         />

</LinearLayout>