<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/password_layout"
    android:orientation="vertical" >

    <include
        android:id="@+id/titleBar"
        layout="@layout/root_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/input_pwd"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/pwd_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:password="true"
        android:background="@drawable/dialog_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/repeat_pwd"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/repwd_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:password="true"
        android:background="@drawable/dialog_input" />
    
    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/button_non_normal" />

</LinearLayout>