<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/titleBar"
        layout="@layout/root_layout" />

    <RelativeLayout
        android:id="@+id/Step_num_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_bg_selected"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Step_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Step"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_left_h"
            android:text="@string/Day"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btn_week"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_middle_bg"
            android:text="@string/Week"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btn_Month"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_right_bg"
            android:text="@string/Month"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/chaw_top_day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg" >

            <TextView
                android:id="@+id/step_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Step_count"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/DailyAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/step_count"
                android:layout_marginLeft="10dp"
                android:text="@string/Daily_average"
                android:textColor="@color/white"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/today_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/DailyAverage"
                android:text="@string/Today_time"
                android:textColor="@color/white"
                android:textSize="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/chaw_top_day_table"
                android:background="@android:color/white" />

            <RelativeLayout
                android:id="@+id/chaw_top_day_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/today_time" >
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chaw_bottom_day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg" >

            <TextView
                android:id="@+id/Walk_Run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Walk_Run"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/DailyAverage_Distence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Walk_Run"
                android:layout_marginLeft="10dp"
                android:text="@string/Daily_average"
                android:textColor="@color/white"
                android:textSize="8dp" />

            <TextView
                android:id="@+id/Today_Distence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/Today_Distence"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/today_time_Distence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/Today_Distence"
                android:text="@string/Today_time"
                android:textColor="@color/white"
                android:textSize="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/chaw_bottom_day_table"
                android:background="@android:color/white" />

            <RelativeLayout
                android:id="@+id/chaw_bottom_day_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/today_time_Distence" >
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>